--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
 
                 <!-- Success/Error Messages -->
                 <div id="message" class="message" style="display: none;"></div>
+                
+                <!-- Connection Status -->
+                <div id="connectionStatus" class="connection-status" style="display: none;">
+                    <span class="status-icon">🔄</span>
+                    <span class="status-text">Checking connection...</span>
+                </div>
             </section>
 
             <!-- Live Data Table -->
